css/style.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
	background-color: LightGray;
}

div {
	border: 1px solid Chocolate;
}

/*Headings*/
h1 {
    font-family: 'Roboto', sans-serif;
    font-size: 3rem;
    font-weight: 300;
}

h2 {
    font-family: 'Roboto', sans-serif;
    font-size: 1.5rem;
    font-weight: 300;
}


/* Nav bar */
.top-navigation{
	background-color: #fff;
    /*position: fixed;    Allows jumbotron to start from top*/
    width: 100%;
  
    /*background-color: rgba(255, 255, 255, 0.8);*/
    
    position: absolute;
    top: 0;
    height: 70px;
}

.top-navigation > .content {
	/*width: 970px;*/
    width: 46rem;
	min-height: 70px;
	margin: 0 auto;
	padding: 0px 15px;
}

/*.links {
	float: right;
	display: inline-block;
}
*/
.top-navigation .links {
    float: right;
    font-family: 'Roboto', sans-serif;
    color: #838994;
    font-size: 16px;
    letter-spacing: 0.03em;
    margin-top: 25px;
    -webkit-font-smoothing: antialiased;
}
.top-navigation .links li {
    display: inline-block;
    margin-left: 25px;
}
.top-navigation .links .active {
    color: #4c5058;
    font-weight: 500;
}
.top-navigation .links li:hover {
    cursor: pointer;
    color: #333333;
}

.logo {
	margin: 15px;
	/*padding: 15px;*/
}

.jumbotron {
	background-image: url("../images/first-background.jpg");
    background-size: cover;
    background-position: center bottom;
    height: 46rem;

    color: #FFFFFF;
    text-align: center;
    padding: 15rem;
}

.buttons {
    width: 10rem;
    background-color: #f15a29;
    border-radius: 4px;
    border-style: none;
    padding: 1rem 1.5rem;
    color: #FFFFFF;
    margin: 0 auto;
}

/*.introduction {
    margin-top: 70px;
}*/

